tests/NormalTests/paczka1/fuzzy1/41626110.err
Error in line 3: fel A636 70,1
Error in line 4: fel S468 53,2
Error in line 7: S661 S661 11,2
Error in line 9: zmzV S661 88,4
Error in line 12: FKbi S661 96,5
Error in line 21: FKbi A272 10,8
Error in line 16: 0bRa A636 88,3
